--- a/AddressBookApp/css_files/AddPerson.css
+++ b/AddressBookApp/css_files/AddPerson.css
@@ -40,3 +40,53 @@ body {
 .per-address {
     color: #42515f;
 }
+
+* {
+    box-sizing: border-box;
+}
+
+.form-content {
+    min-height: calc(100%-80px);
+    background-color: #f7f7f7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 0px solid rgb(0, 174, 255);
+}
+
+.form {
+    width: 65%;
+    padding: 44px 60px;
+    background: #ffffff 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 8px;
+    opacity: 1;
+}
+
+.form-head {
+    font: normal normal bold 24px/37px Roboto;
+    letter-spacing: 0px;
+    color: white ;
+    text-transform: capitalize;
+    opacity: 1;
+    padding-bottom: 20px;
+    text-align: center;
+    background-color: rgb(0, 174, 255);
+    justify-content: center;
+    padding: 15px 0px;
+}
+
+.cancel-button{
+    font: normal normal normal 22px/29px Roboto;
+    letter-spacing: 0px;
+    color: #ffffff;
+    opacity: 1;
+    background: rgb(0, 174, 255) 0% 0% no-repeat padding-box;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 18px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+}
