--- a/AddressBookApp/css_files/AddPerson.css
+++ b/AddressBookApp/css_files/AddPerson.css
@@ -117,7 +117,7 @@ select{
     display:inline-block;
     box-sizing:border-box;
     opacity: 1;
-    padding-right: 167px;
+    padding-right: 160px;
 }
 
 .input-code {
@@ -126,7 +126,7 @@ select{
     border: 1px solid #ccc ;
     border-radius: 4px;
     resize: vertical;
-    padding-right:167px;
+    padding-right:160px;
 }
 
 error-output {
@@ -135,3 +135,101 @@ error-output {
     font: italic;
     font-family: sans-serif;
 }    
+
+.button-parent {
+    display: flex;
+    margin-bottom: 10px;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+
+.button {
+    font-size: 20px;
+    font-family: Roboto;
+    letter-spacing: 0px;
+    color: #42515f;
+    opacity: 1;
+    font-weight: 400;
+    min-width: 140px;
+    padding: 7px 7px;
+    border: 1px solid #707070;
+    cursor: pointer;
+    border-radius:6px;
+    background-color: #f5f5f5;
+}
+
+.addButton {
+    border: 1px solid #707070;
+    background-color: #f5f5f5;
+    margin-right: 30px ;
+}
+
+.cancel-button {
+    align-items: flex-end;
+}
+
+@media  only screen and (max-width:600px) {
+    .form{
+        margin-top: 10px;
+    }
+
+    .submit-reset{
+        width: 100%;
+        display: flex;
+        flex-grow: 1;
+        flex-direction:  row-reverse;
+        justify-content: space-between;
+        margin-bottom: 20px;
+
+    }
+    
+    .submitButton{
+        margin: 0;
+    }
+
+    .button-parent{
+        flex-direction: column-reverse;
+        align-items: flex-start;
+    }
+
+}
+
+@media only screen and (max-width:960px) {
+
+    .cancelButton{
+        margin-left: 0px;
+    }
+    .form{
+        width: 85%;
+        padding: 44px 20px;
+    }    
+    .profile-label{
+        margin-right: 0px;
+    }
+}
+
+a.button:hover{
+    background:grey;
+    color: white;
+}
+
+.submitButton:hover{
+    background-color: #82a70c;
+    color: white;
+}
+
+.resetButton:hover{
+    background:grey;
+    color: white;
+}
+
+.department{
+    margin-left: 30px;
+}
+
+@media only screen and (max-width:320px){
+    .label{
+        min-width: 50px;
+    }
+     
+} 
