--- a/AddressBookApp/css_files/Home_Page.css
+++ b/AddressBookApp/css_files/Home_Page.css
@@ -54,3 +54,42 @@ html{
     color: #42515f;
     opacity: 1;
 }
+
+.per-count{
+    background-color: rgb(0, 174, 255);
+    color: #ffffff;
+    border-radius: 50%;
+    font-size: 20px;
+    width: 40px;
+    text-align: center;
+    display: inline-block;
+
+}
+
+*{
+    box-sizing: border-box;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    min-height:  calc(100vh - 80px);
+    background-color: #f7f7f7;
+    padding: 30px 0px 10px;
+    box-sizing: border-box;
+}
+
+.add-button{
+    font: normal normal normal 22px/29px Roboto;
+    letter-spacing: 0px;
+    color: #ffffff;
+    opacity: 1;
+    background: rgb(0, 174, 255) 0% 0% no-repeat padding-box;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 18px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+}
