--- a/AddressBookApp/css_files/AddPerson.css
+++ b/AddressBookApp/css_files/AddPerson.css
@@ -65,16 +65,24 @@ body {
 }
 
 .form-head {
-    font: normal normal bold 24px/37px Roboto;
+    display: flex;
+    flex-direction: row;
+    font: normal normal normal 28px/37px Roboto;
+    background: #008CFF 0% 0% no-repeat padding-box;
     letter-spacing: 0px;
     color: white ;
     text-transform: capitalize;
     opacity: 1;
     padding-bottom: 20px;
     text-align: center;
-    background-color: rgb(0, 174, 255);
-    justify-content: center;
+    background-color: #008CFF;
     padding: 15px 0px;
+    border-radius: 4px;
+}
+
+.form-head-text {
+    width: 90%;
+    text-align: center;
 }
 
 .row-content {
@@ -137,10 +145,10 @@ error-output {
 }    
 
 .button-parent {
-    display: flex;
     margin-bottom: 10px;
-    justify-content: space-between;
+    text-align: end;
     margin-top: 30px;
+    
 }
 
 .button {
@@ -152,20 +160,20 @@ error-output {
     font-weight: 400;
     min-width: 140px;
     padding: 7px 7px;
-    border: 1px solid #707070;
-    cursor: pointer;
-    border-radius:6px;
-    background-color: #f5f5f5;
+    cursor: pointer;;
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+    border: 1px solid #969696;
+    border-radius: 5px;
+    opacity: 1;
 }
 
 .addButton {
-    border: 1px solid #707070;
-    background-color: #f5f5f5;
+    align-items: flex-end;
     margin-right: 30px ;
 }
 
-.cancel-button {
-    align-items: flex-end;
+.add-reset{
+    text-align: right;
 }
 
 @media  only screen and (max-width:600px) {
@@ -173,7 +181,7 @@ error-output {
         margin-top: 10px;
     }
 
-    .submit-reset{
+    .add-reset{
         width: 100%;
         display: flex;
         flex-grow: 1;
@@ -183,7 +191,7 @@ error-output {
 
     }
     
-    .submitButton{
+    .addButton{
         margin: 0;
     }
 
@@ -210,7 +218,7 @@ a.button:hover{
     color: white;
 }
 
-.submitButton:hover{
+.addButton:hover{
     background-color: #82a70c;
     color: white;
 }
